--- a/Components/CSS/odd-theme.css
+++ b/Components/CSS/odd-theme.css
@@ -8,7 +8,7 @@
   --odd-color-text: #111111;
   --odd-color-text-secondary: #3B3B3B;
   --odd-color-focus: #C58A00;
-  --odd-color-link: #005A9C;
+  --odd-color-link: #1f6b35;
   --odd-color-link-visited: #5E2A84;
   --odd-color-error: #B3261E;
   --odd-color-warning: #8A4F00;
